--- a/Lab8.ipynb
+++ b/Lab8.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Lab 8** #"
+    "# **Lab 8 and Lab 9** #"
    ]
   },
   {
